[gd_scene load_steps=25 format=3 uid="uid://ccosnf52i1l8t"]

[ext_resource type="Script" uid="uid://cdvjm8lecvxjc" path="res://scripts/parking_lot.gd" id="1_67ek6"]
[ext_resource type="Texture2D" uid="uid://buv1kd3ln3pbq" path="res://assets/parkingLot_BG.png" id="1_rexr8"]
[ext_resource type="Texture2D" uid="uid://u7y1vgc3e15w" path="res://carBodies/Gemini_Generated_Image_shdgyfshdgyfshdg(even_smaller).png" id="2_fpfd3"]
[ext_resource type="Script" uid="uid://cgbnmm25uovu4" path="res://scripts/main_menu.gd" id="2_h57tm"]
[ext_resource type="FontFile" uid="uid://dsdsw7axr2tds" path="res://fonts/Kenney Mini Square.ttf" id="2_rmsgb"]
[ext_resource type="Script" uid="uid://bj8gt1ydeei8o" path="res://scripts/choose_carpnl.gd" id="4_4gwln"]
[ext_resource type="Texture2D" uid="uid://b06hhoeroilmo" path="res://carBodies/(hover)Gemini_Generated_Image_shdgyfshdgyfshdg(even_smaller).png" id="4_ppvmu"]
[ext_resource type="LabelSettings" uid="uid://cu2kxdh38wd7e" path="res://scenes/label_settings.tres" id="5_fpfd3"]
[ext_resource type="Script" uid="uid://bhofe0kcafq41" path="res://scripts/dynopnl.gd" id="9_127ow"]

[sub_resource type="Animation" id="Animation_rmsgb"]
resource_name = "water"
length = 1.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64), Rect2(128, 0, 64, 64), Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64), Rect2(128, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_h57tm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pekt7"]
_data = {
&"RESET": SubResource("Animation_h57tm"),
&"water": SubResource("Animation_rmsgb")
}

[sub_resource type="Animation" id="Animation_pekt7"]
resource_name = "start_up"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2069, 220), Vector2(1504, 220)]
}

[sub_resource type="Animation" id="Animation_4gwln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2069, 220)]
}

[sub_resource type="Animation" id="Animation_ppvmu"]
resource_name = "slide_out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1504, 220), Vector2(2069, 220)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fpfd3"]
_data = {
&"RESET": SubResource("Animation_4gwln"),
&"slide_out": SubResource("Animation_ppvmu"),
&"start_up": SubResource("Animation_pekt7")
}

[sub_resource type="Animation" id="Animation_fpfd3"]
resource_name = "slide_in"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-434, 374), Vector2(800, 374)]
}

[sub_resource type="Animation" id="Animation_67ek6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-434, 374)]
}

[sub_resource type="Animation" id="Animation_127ow"]
resource_name = "slide_out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(800, 374), Vector2(-434, 374)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppvmu"]
_data = {
&"RESET": SubResource("Animation_67ek6"),
&"slide_in": SubResource("Animation_fpfd3"),
&"slide_out": SubResource("Animation_127ow")
}

[sub_resource type="Animation" id="Animation_nq1o5"]
resource_name = "open_dyno"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1880, 142), Vector2(320, 142)]
}

[sub_resource type="Animation" id="Animation_4moqh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1880, 142)]
}

[sub_resource type="Animation" id="Animation_d6i7b"]
resource_name = "close_dyno"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 142), Vector2(-1880, 142)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1jv1"]
_data = {
&"RESET": SubResource("Animation_4moqh"),
&"close_dyno": SubResource("Animation_d6i7b"),
&"open_dyno": SubResource("Animation_nq1o5")
}

[node name="Parking_lot" type="Node2D"]
script = ExtResource("1_67ek6")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(966.00006, 348)
scale = Vector2(30.375004, 19.1875)
texture = ExtResource("1_rexr8")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="bg"]
libraries = {
&"": SubResource("AnimationLibrary_pekt7")
}
autoplay = "water"

[node name="bodyType1" type="Sprite2D" parent="bg"]
position = Vector2(-10.17284, 20.117262)
scale = Vector2(0.24451117, 0.3395765)
texture = ExtResource("2_fpfd3")

[node name="bodyType2" type="Sprite2D" parent="bg"]
position = Vector2(-10.17284, 20.117262)
scale = Vector2(0.24451117, 0.3395765)
texture = ExtResource("4_ppvmu")

[node name="main_menu" type="Panel" parent="."]
offset_left = 2069.0
offset_top = 220.0
offset_right = 2411.0
offset_bottom = 614.0
script = ExtResource("2_h57tm")

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu"]
layout_mode = 0
offset_left = 20.0
offset_top = 26.0
offset_right = 325.0
offset_bottom = 374.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="main_menu/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = " Build car"

[node name="Button2" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = " Build engine"

[node name="Button3" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = "Select car"

[node name="Button4" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = "dyno the car"

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_menu"]
libraries = {
&"": SubResource("AnimationLibrary_fpfd3")
}
autoplay = "start_up"

[node name="chooseCarpnl" type="Panel" parent="."]
offset_left = -434.0
offset_top = 374.0
offset_right = -129.0
offset_bottom = 547.0
script = ExtResource("4_4gwln")

[node name="Label" type="Label" parent="chooseCarpnl"]
layout_mode = 0
offset_left = 48.0
offset_top = 22.0
offset_right = 189.0
offset_bottom = 55.0
text = "Choose your car:"
label_settings = ExtResource("5_fpfd3")

[node name="OptionButton" type="OptionButton" parent="chooseCarpnl"]
layout_mode = 0
offset_left = 61.0
offset_top = 66.0
offset_right = 254.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="chooseCarpnl"]
libraries = {
&"": SubResource("AnimationLibrary_ppvmu")
}

[node name="Button" type="Button" parent="chooseCarpnl"]
layout_mode = 0
offset_left = 64.0
offset_top = 108.0
offset_right = 172.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = "Choose car"

[node name="errorlbl" type="Label" parent="."]
offset_left = 569.0
offset_top = 53.0
offset_right = 1185.0
offset_bottom = 149.0
label_settings = ExtResource("5_fpfd3")

[node name="dynopnl" type="Panel" parent="."]
offset_left = -1880.0
offset_top = 142.0
offset_right = -704.0
offset_bottom = 881.0
script = ExtResource("9_127ow")

[node name="GraphBackground" type="ColorRect" parent="dynopnl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 16.0
offset_right = -14.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.32915837, 0.3291584, 0.3291584, 1)

[node name="TorqueLine" type="Line2D" parent="dynopnl"]
width = 2.0
default_color = Color(0, 0.44412082, 0.78860873, 1)

[node name="PowerLine" type="Line2D" parent="dynopnl"]
width = 2.0
default_color = Color(0.8260124, 0, 0.08243292, 1)

[node name="RPM_Marker" type="Line2D" parent="dynopnl"]
width = 2.0
default_color = Color(0.4940132, 0.3422607, 0.0119498065, 1)

[node name="currentRPM" type="HSlider" parent="dynopnl"]
layout_mode = 0
offset_left = 77.0
offset_top = 636.0
offset_right = 1088.0
offset_bottom = 673.0
step = 100.0

[node name="lblCurrentTorque" type="Label" parent="dynopnl"]
layout_mode = 0
offset_left = 52.0
offset_top = 419.0
offset_right = 92.0
offset_bottom = 442.0
label_settings = ExtResource("5_fpfd3")

[node name="lblCurrentPower" type="Label" parent="dynopnl"]
layout_mode = 0
offset_left = 145.0
offset_top = 419.0
offset_right = 185.0
offset_bottom = 442.0
label_settings = ExtResource("5_fpfd3")

[node name="Label" type="Label" parent="dynopnl"]
layout_mode = 0
offset_left = 473.00003
offset_top = 669.0
offset_right = 603.0
offset_bottom = 699.21985
text = "Current RPM: 0"
label_settings = ExtResource("5_fpfd3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="dynopnl"]
libraries = {
&"": SubResource("AnimationLibrary_e1jv1")
}

[node name="Button" type="Button" parent="dynopnl"]
layout_mode = 0
offset_left = 1048.0
offset_top = 696.0
offset_right = 1158.0
offset_bottom = 726.0
theme_override_fonts/font = ExtResource("2_rmsgb")
theme_override_font_sizes/font_size = 17
text = " close dyno"

[connection signal="pressed" from="main_menu/VBoxContainer/Button" to="main_menu" method="_on_button_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Button2" to="main_menu" method="_on_button_2_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Button3" to="main_menu" method="_on_button_3_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Button4" to="main_menu" method="_on_button_4_pressed"]
[connection signal="pressed" from="chooseCarpnl/Button" to="chooseCarpnl" method="_on_button_pressed"]
[connection signal="value_changed" from="dynopnl/currentRPM" to="dynopnl" method="_on_current_rpm_value_changed"]
[connection signal="pressed" from="dynopnl/Button" to="main_menu" method="_on_close_dyno_button_pressed"]
